<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_registrarCA_Admin"
            android:icon="@android:drawable/ic_menu_send"
            android:title="Registrar CA Admin" />
        <item
            android:id="@+id/nav_registrarCA_User"
            android:icon="@drawable/ic_menu_send"
            android:title="Registrar CA Usuario" />
        <item
            android:id="@+id/nav_buscarca"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/menu_buscarMapa" />

        <item
            android:id="@+id/nav_ActualizacionCA"
            android:icon="@android:drawable/ic_menu_send"
            android:title="Actualizar Dirección CA" />
    </group>
</menu>
