<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.centroacopioii.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.example.centroacopioii.buscarCentroAcopio"
        android:label="@string/home_second"
        tools:layout="@layout/elemento_lista">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.centroacopioii.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.centroacopioii.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_buscarca"
        android:name="com.example.centroacopioii.ui.slideshow.SlideshowFragment"
        android:label="Buscar Lista"
        tools:layout="@layout/fragment_buscar_centro_acopio" />
    <fragment
        android:id="@+id/nav_registrarCA_User"
        android:name="com.example.centroacopioii.registroNuevo_ca"
        android:label="Registrar CA Usuario"
        tools:layout="@layout/fragment_registro_nuevo_ca" />
    <fragment
        android:id="@+id/nav_registrarCA_Admin"
        android:name="com.example.centroacopioii.registro_new_ca_admin"
        android:label="Registrar CA Admin"
        tools:layout="@layout/fragment_registro_new_ca_admin" />
</navigation>